Fix wrapping on country names that have space

--- a/css/ui-unit-info.css
+++ b/css/ui-unit-info.css
@@ -131,6 +131,7 @@
 	margin-left: 5px;
 	background-image: url('../resources/ui/flags/flag_big_18.png');
 	line-height: 30px; /* for spacing vertically country name text */
+	white-space: nowrap;
 }
 
 #uTransport
